# Cucca

./: .gitignore  CMakeLists.txt  cucca.cbp  cucca.depend  cucca.layout  install_windows.sh
TerrainDemo/include/: HeightMap.hpp  HeightMap_Init_Default.hpp  Terrain.hpp  TerrainDemo.hpp  VertexData_Init_HeightMap.hpp
TerrainDemo/shaders/: FS_Terrain.glsl  TCS_Terrain.glsl  TES_Terrain.glsl  VS_Terrain.glsl
TerrainDemo/src/: HeightMap.cpp  Terrain.cpp  TerrainDemo.cpp
dev/: cucca_logo1.xcf  cucca_logo2.xcf  todo.txt
include/Core/: Binary.hpp  BinaryInitializer_File.hpp  Binary_File.hpp  Binary_Init_File.hpp  Canvas.hpp  Component.hpp  Device.hpp  Event.hpp  EventBase.hpp  EventComponent.hpp  LinearAlgebra.hpp  MathUtils.hpp  Node.hpp  Platform.hpp  Resource.hpp  ResourceBase.hpp  ResourceId.hpp  ResourceInitializer.hpp  ResourceInitializerBase.hpp  ResourceLoader.hpp  ResourceLoadingEvent.hpp  ResourceManager.hpp  ResourcePointer.hpp  StorageVector.hpp  Task.hpp  TaskQueue.hpp  ThreadPool.hpp  Visitor.hpp
include/CoreExtensions/: Canvas_SFML.hpp  EventVisitor_SFML.hpp
include/Cucca/Core/: Binary.hpp  Binary_Init_File.hpp  Canvas.hpp  Component.hpp  Event.hpp  EventBase.hpp  MathTypes.hpp  Node.hpp  ResourceBase.hpp  ResourceInitInfoBase.hpp  ResourceManager.hpp  ResourcePointer.hpp  Task.hpp  ThreadPool.hpp
include/Cucca/CoreExtensions/: EventVisitor_SFML.hpp
include/Cucca/Debug/: Debug.hpp
include/Cucca/Graphics/: BasicCamera.hpp  Mesh.hpp  MeshComponent.hpp  ShaderObject_Init_Binary.hpp  ShaderProgram.hpp  ShaderProgram_Init_Default.hpp  Texture.hpp  Texture_Init_Binary.hpp  TransformationComponent.hpp  TransformationVisitor.hpp  VertexData.hpp
include/Cucca/GraphicsExtensions/: MovableCamera.hpp  VertexData_Init_BasicShapes.hpp
include/Debug/: Debug.hpp  Print.hpp  Time.hpp
include/Graphics/: BasicCamera.hpp  Camera.hpp  Material.hpp  Material_Default.hpp  Material_Init_Default.hpp  Mesh.hpp  MeshComponent.hpp  Mesh_Default.hpp  Mesh_Init_Default.hpp  ShaderObject.hpp  ShaderObject_Binary.hpp  ShaderObject_Init_Binary.hpp  ShaderProgram.hpp  ShaderProgram_Default.hpp  ShaderProgram_Init_Default.hpp  Texture.hpp  Texture_Binary.hpp  Texture_Init_Binary.hpp  TransformationComponent.hpp  VertexData.hpp  VertexData_Binary.hpp  VertexData_Init_Binary.hpp
include/GraphicsExtensions/: HeightMap.hpp  HeightMap_Default.hpp  HeightMap_Init_Default.hpp  MovableCamera.hpp  Terrain.hpp  VertexData_HeightMap.hpp  VertexData_Init_HeightMap.hpp
include/UnitTests/: UnitTest1.hpp  UnitTest2.hpp  UnitTest3.hpp  UnitTest4.hpp  UnitTest5.hpp  UnitTests.hpp
include/core/: Canvas.hpp  Component.hpp  Device.hpp  Event.hpp  EventBase.hpp  Node.hpp  Visitor.hpp
res/: test.txt  test2.txt
res/shaders/: FS_Simple.glsl  FS_SingleTexture.glsl  VS_Simple.glsl
src/: main.cpp
src/Core/: Binary.cpp  BinaryInitializer_File.cpp  CMakeLists.txt  Event.cpp  EventBase.cpp  EventComponent.cpp  Node.cpp  Platform.cpp  ResourceBase.cpp  ResourceId.cpp  Task.cpp  TaskQueue.cpp  ThreadPool.cpp
src/CoreExtensions/: CMakeLists.txt  Canvas_SFML.cpp  EventVisitor_SFML.cpp
src/Debug/: CMakeLists.txt  Print.cpp  Time.cpp
src/Graphics/: BasicCamera.cpp  CMakeLists.txt  Camera.cpp  Material.cpp  Mesh.cpp  MeshComponent.cpp  Mesh_Init_Default.cpp  ShaderObject.cpp  ShaderProgram.cpp  Texture.cpp  TransformationComponent.cpp  TransformationVisitor.cpp  VertexData.cpp
src/GraphicsExtensions/: CMakeLists.txt  HeightMap.cpp  MovableCamera.cpp  Terrain.cpp  VertexData_Init_HeightMap.cpp
src/UnitTests/: UnitTest1.cpp  UnitTest2.cpp  UnitTest3.cpp  UnitTest4.cpp  UnitTest5.cpp
src/shaders/: FS_Simple.glsl  FS_SingleTexture.glsl  VS_SingleTexture.glsl
